--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -4,7 +4,7 @@
   position: relative;
 }
 .hero img {
-  width: 100vw;
+  width: 100%;
   height: auto;
   box-shadow: 4px 4px 8px rgb(255, 255, 255);
   min-height: 300px;
